2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* tests/tracker-indexer/tracker-metadata-utils-test.c: Remove tests
	related to metadata merging, this leaves the file mostly empty, but
	would be useful to keep it around when some other tests to
	tracker-indexer are added.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c (lists_equal)
	(metadata_action_item_new) (calculate_merge_action)
	(add_deleted_items) (tracker_metadata_utils_calculate_merge)
	(tracker_metadata_utils_action_item_free): Removed functions, they
	weren't used anywhere.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-thumbnailer/tracker-thumbnailer.c: Use GChecksum instead
	of shipped MD5 implementation.
	* src/tracker-thumbnailer/Makefile.am:
	* src/tracker-thumbnailer/md5.[ch]: Removed MD5 implementation, no 
	longer necessary.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* data/sqlite-stored-procs.sql: Use '#' to begin comments.
	* src/libtracker-db/tracker-db-manager.c (load_prepared_queries): Skip
	lines that begin with '#'.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-thumbnailer/Makefile.am: Install thumbnailer in libexec.
	* src/tracker-indexer/Makefile.am:
	* tests/tracker-indexer/Makefile.am: define LIBEXECDIR
	* src/tracker-indexer/tracker-metadata-utils.c
	(tracker_metadata_query_file) (tracker_metadata_utils_get_thumbnail):
	Use LIBEXECDIR to locate both tracker-extract and tracker-thumbnailer.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (create_update_item): Avoid
	potential double frees.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c
	(tracker_metadata_watch_cb): Rename to process_watch_cb() and make
	generic to all spawned processes, so we don't leave defunct processes
	all around.

2008-08-27  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-ontology.c: