@@ -10,7 +10,8 @@ INCLUDES =								\
 	-I$(top_srcdir)/src						\
 	$(DBUS_CFLAGS)							\
 	$(PANGO_CFLAGS)							\
-	$(GMODULE_CFLAGS)
+	$(GMODULE_CFLAGS)						\
+	$(HILDON_THUMBNAIL_CFLAGS)
 
 libexec_PROGRAMS = tracker-indexer
 
@@ -42,6 +43,7 @@ tracker_indexer_LDADD =							\
 	$(PANGO_LIBS)							\
 	$(GIO_LIBS)							\
 	$(GLIB2_LIBS)							\
+	$(HILDON_THUMBNAIL_LIBS)					\
 	-lz								\
 	-lm
 
