@@ -48,8 +48,6 @@ void              tracker_metadata_utils_action_item_free (MetadataActionItem *i
 
 TrackerMetadata * tracker_metadata_utils_get_data      (const gchar *path);
 gchar *           tracker_metadata_utils_get_text      (const gchar *path);
-gchar *           tracker_metadata_utils_get_thumbnail (const gchar *path,
-							const gchar *mime);
 
 GSList *          tracker_metadata_utils_calculate_merge (TrackerMetadata *old_metadata,
 							  TrackerMetadata *new_metadata);
